Add nav container stying

--- a/cryptoTaxes/src/app/header-nav/header-nav.component.html
+++ b/cryptoTaxes/src/app/header-nav/header-nav.component.html
@@ -1,1 +1,10 @@
-<p>header-nav works!</p>
+<section>
+  <div class="header_nav__container">
+    <div class="header_nav__icon">
+      <app-icon></app-icon>
+    </div>
+    <div class="header_nav__navigation">
+      <app-navigation-bar></app-navigation-bar>
+    </div>
+  </div>
+</section>
