--- a/cryptoTaxes/src/app/shared/loading-spinner/loading-spinner.component.html
+++ b/cryptoTaxes/src/app/shared/loading-spinner/loading-spinner.component.html
@@ -1,1 +1,3 @@
-<img *ngIf="loading" src="../../assets/images/loading.gif" />
+<ng-container *ngIf="isLoading">
+  <span class="loader"></span>
+</ng-container>
