--- a/cryptoTaxes/src/styles.scss
+++ b/cryptoTaxes/src/styles.scss
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./app/scss/_base.scss";
+@import "./app/scss/_variables.scss";
+@import "./app/scss/_mixins.scss";
