--- a/cryptoTaxes/src/app/shared/loading-spinner/loading-spinner.component.scss
+++ b/cryptoTaxes/src/app/shared/loading-spinner/loading-spinner.component.scss
@@ -1,32 +1,35 @@
 @import "../../../styles.scss";
 
 :host {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
   .loader {
-    width: 16px;
-    height: 16px;
-    border-radius: 50%;
-    display: block;
-    margin: 15px auto;
-    position: relative;
-    background: #ff3d00;
-    color: rgb(74, 15, 169);
-    box-shadow: -24px 0, 24px 0;
-    box-sizing: border-box;
-    animation: rotation 2s ease-in-out infinite;
-  }
-
-  @keyframes rotation {
-    0% {
-      transform: rotate(0deg);
+    &__container {
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
-    100% {
-      transform: rotate(360deg);
+
+    &__spinner {
+      width: 16px;
+      height: 16px;
+      border-radius: 50%;
+      display: block;
+      margin: 15px auto;
+      position: relative;
+      background: #ff3d00;
+      color: rgb(74, 15, 169);
+      box-shadow: -24px 0, 24px 0;
+      box-sizing: border-box;
+      animation: rotation 2s ease-in-out infinite;
+    }
+    @keyframes rotation {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
     }
   }
 }
