--- a/cryptoTaxes/src/app/shared/loading-spinner/loading-spinner.component.html
+++ b/cryptoTaxes/src/app/shared/loading-spinner/loading-spinner.component.html
@@ -1,3 +1,3 @@
-<ng-container *ngIf="isLoading">
-  <span class="loader"></span>
-</ng-container>
+<div class="loader__container" *ngIf="isLoading">
+  <span class="loader__spinner"></span>
+</div>
