Add wallets and icons

--- a/cryptoTaxes/src/app/shared/tips/tips.component.html
+++ b/cryptoTaxes/src/app/shared/tips/tips.component.html
@@ -1,1 +1,16 @@
-<p>tips works!</p>
+<!-- Add Dropdown selector for wallet QR code -->
+<!-- Dynamically load selected QR code and wallet address -->
+<img
+  src="./assets/wallets/HeliumTip.png"
+  alt="Helium Wallet Address for Tips"
+/>
+
+<!-- Add section to link to affilite links free crypto for signing up -->
+
+<!-- Helium Staking URL https://app.helium-staking.com/register/stake10  10% off-->
+
+<!-- Crypto.com referral Use my referral link https://crypto.com/app/znnwk7hr2c to sign up for Crypto.com and we both get $25 USD :) -->
+
+<!-- Coinbase https://coinbase.com/join/sevy_a?src=ios-link -->
+
+<!-- Stash https://get.stash.com/joshuarxqf6 Both get 20$ with deposit -->
