Add second spinner option

--- a/cryptoTaxes/src/app/shared/tips/tips.component.html
+++ b/cryptoTaxes/src/app/shared/tips/tips.component.html
@@ -1,9 +1,6 @@
 <!-- Add Dropdown selector for wallet QR code -->
 <!-- Dynamically load selected QR code and wallet address -->
-<img
-  src="./assets/wallets/HeliumTip.png"
-  alt="Helium Wallet Address for Tips"
-/>
+<img src="./assets/wallets/HNTTip.png" alt="Helium Wallet Address for Tips" />
 
 <!-- Add section to link to affilite links free crypto for signing up -->
 
