--- a/cryptoTaxes/src/app/shared/loading-spinner/loading-spinner.component.scss
+++ b/cryptoTaxes/src/app/shared/loading-spinner/loading-spinner.component.scss
@@ -32,4 +32,38 @@
       }
     }
   }
+
+  //   .loader__two {
+  //   width: 48px;
+  //   height: 48px;
+  //   display: inline-block;
+  //   position: relative;
+  // }
+  // .loader__two::after,
+  // .loader__two::before {
+  //   content: '';
+  //   box-sizing: border-box;
+  //   width: 48px;
+  //   height: 48px;
+  //   border-radius: 50%;
+  //   border: 2px solid #FFF;
+  //   position: absolute;
+  //   left: 0;
+  //   top: 0;
+  //   animation: animloader 2s linear infinite;
+  // }
+  // .loader__two::after {
+  //   animation-delay: 1s;
+  // }
+
+  // @keyframes animloader {
+  //   0% {
+  //     transform: scale(0);
+  //     opacity: 1;
+  //   }
+  //   100% {
+  //     transform: scale(1);
+  //     opacity: 0;
+  //   }
+  // }
 }
