--- a/cryptoTaxes/src/app/header-nav/navigation-bar/navigation-bar.component.html
+++ b/cryptoTaxes/src/app/header-nav/navigation-bar/navigation-bar.component.html
@@ -1,1 +1,5 @@
-<p>navigation-bar works!</p>
+<div class="nav">
+  <a *ngFor="let tab of tabs" class="nav__link" href="{{ tab.route }}">{{
+    tab.displayName
+  }}</a>
+</div>
