--- a/cryptoTaxes/src/app/homepage-container/homepage-container.component.html
+++ b/cryptoTaxes/src/app/homepage-container/homepage-container.component.html
@@ -1,5 +1,5 @@
-<app-loading-spinner [isLoading]="!isLoaded"></app-loading-spinner>
-<ng-container *ngIf="isLoaded">
-  <h1>PLACE HOLDER TITLE</h1>
+<app-loading-spinner [isLoading]="!loaded"></app-loading-spinner>
+<div class="homepage__container" *ngIf="loaded">
+  <h1>{{ log }}</h1>
   <h2>CONTENT</h2>
-</ng-container>
+</div>
