--- a/cryptoTaxes/src/app/shared/loading-spinner/loading-spinner.component.scss
+++ b/cryptoTaxes/src/app/shared/loading-spinner/loading-spinner.component.scss
@@ -1,6 +1,40 @@
 @import "../../../styles.scss";
 
 :host {
+  // Three ball default spinner
+  // .loader {
+  //   &__container {
+  //     width: 100vw;
+  //     height: 100vh;
+  //     display: flex;
+  //     align-items: center;
+  //     justify-content: center;
+  //   }
+
+  //   &__spinner {
+  //     width: 16px;
+  //     height: 16px;
+  //     border-radius: 50%;
+  //     display: block;
+  //     margin: 15px auto;
+  //     position: relative;
+  //     background: #ff3d00;
+  //     color: rgb(74, 15, 169);
+  //     box-shadow: -24px 0, 24px 0;
+  //     box-sizing: border-box;
+  //     animation: rotation 2s ease-in-out infinite;
+  //   }
+  //   @keyframes rotation {
+  //     0% {
+  //       transform: rotate(0deg);
+  //     }
+  //     100% {
+  //       transform: rotate(360deg);
+  //     }
+  //   }
+  // }
+
+  // Ripple spinner uncomment to use, comment out three sphere spinner above
   .loader {
     &__container {
       width: 100vw;
@@ -11,59 +45,39 @@
     }
 
     &__spinner {
-      width: 16px;
-      height: 16px;
-      border-radius: 50%;
-      display: block;
-      margin: 15px auto;
+      width: 240px;
+      height: 240px;
+      display: inline-block;
       position: relative;
-      background: #ff3d00;
-      color: rgb(74, 15, 169);
-      box-shadow: -24px 0, 24px 0;
-      box-sizing: border-box;
-      animation: rotation 2s ease-in-out infinite;
     }
-    @keyframes rotation {
+
+    &__spinner::after,
+    &__spinner::before {
+      content: "";
+      box-sizing: border-box;
+      width: 240px;
+      height: 240px;
+      border-radius: 50%;
+      border: 4px solid #000;
+      position: absolute;
+      left: 0;
+      top: 0;
+      animation: animloader 2s linear infinite;
+    }
+
+    &__spinner::after {
+      animation-delay: 1s;
+    }
+
+    @keyframes animloader {
       0% {
-        transform: rotate(0deg);
+        transform: scale(0);
+        opacity: 1;
       }
       100% {
-        transform: rotate(360deg);
+        transform: scale(1);
+        opacity: 0;
       }
     }
   }
-
-  //   .loader__two {
-  //   width: 48px;
-  //   height: 48px;
-  //   display: inline-block;
-  //   position: relative;
-  // }
-  // .loader__two::after,
-  // .loader__two::before {
-  //   content: '';
-  //   box-sizing: border-box;
-  //   width: 48px;
-  //   height: 48px;
-  //   border-radius: 50%;
-  //   border: 2px solid #FFF;
-  //   position: absolute;
-  //   left: 0;
-  //   top: 0;
-  //   animation: animloader 2s linear infinite;
-  // }
-  // .loader__two::after {
-  //   animation-delay: 1s;
-  // }
-
-  // @keyframes animloader {
-  //   0% {
-  //     transform: scale(0);
-  //     opacity: 1;
-  //   }
-  //   100% {
-  //     transform: scale(1);
-  //     opacity: 0;
-  //   }
-  // }
 }
