--- a/cryptoTaxes/src/app/header-nav/header-nav.component.html
+++ b/cryptoTaxes/src/app/header-nav/header-nav.component.html
@@ -6,5 +6,7 @@
     <div class="header_nav__navigation">
       <app-navigation-bar></app-navigation-bar>
     </div>
+      <!-- Add input styling and debounce functionality for crypto api -->
+  <input class="header_nav__input"/>
   </div>
 </section>
