--- a/cryptoTaxes/src/app/header-nav/icon/icon.component.html
+++ b/cryptoTaxes/src/app/header-nav/icon/icon.component.html
@@ -1,1 +1,3 @@
-<img src="./assets/wallet.png" alt="Temporary Icon for Development" />
+<a href="/">
+  <img src="./assets/wallet.png" alt="Temporary Icon for Development" />
+</a>
